# nitro-attest

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
src/: builder.rs  lib.rs
tests/: attestation.cose  lib_tests.rs
tests/fixtures/: 1.der  2.der  3.der  4.der
